--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@
 
       <div id="current-display"></div>
     </container>
-
-    <div class="row row-cols-1 row-cols-md-3">
-      <div class="col mb-4">
-        <div class="card"></div>
-      </div>
-    </div>
+    <main class="row">
+      <div class="display"></div>
+      <div class="row row-cols-1 row-cols-md-5 forecastDisplay"></div>
+    </main>
   </body>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
@@ -50,3 +48,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="./script.js" type="text/javascript"></script>
 </html>
+
+<!-- <div class="col mb-4">
+        <div class="card"></div>
+      </div> -->
