--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button id="search-btn" class="btn btn-outline-success my-2 my-sm-1">
           <i class="fas fa-search"></i>
         </button>
-        <ul class="list-group mt-3 col" id="search-history"></ul>
+        <div id="search-history"></div>
       </div>
 
       <div id="current-display"></div>
