--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- BOOTSTRAP CDN -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+
+    <!-- FONT AWESOME link  -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+
+    <!-- Link to MY CSS  -->
     <link rel="stylesheet" href="./style.css" />
+
     <title>Weather Dashboard</title>
   </head>
 
@@ -24,6 +31,7 @@
       <h1>Weather Dashboard</h1>
     </nav>
 
+    <!-- Search, Search History and Display container. Elements added dynamically  -->
     <container class="row">
       <div class="search-city col-3">
         <input id="search-input" class="inline" placeholder="City" />
@@ -35,16 +43,24 @@
 
       <div id="current-display"></div>
     </container>
+
     <main class="row">
+      <!-- Elements added dynamically  -->
       <div class="display"></div>
       <div class="row row-cols-1 row-cols-md-5 forecastDisplay"></div>
     </main>
+
+    <!-- aJax MOMENT Script -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+      integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Link to MY Script -->
+    <script src="./script.js" type="text/javascript"></script>
   </body>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
-    integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
-    crossorigin="anonymous"
-  ></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="./script.js" type="text/javascript"></script>
 </html>
