--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Link to MY CSS  -->
     <link rel="stylesheet" href="./style.css" />
 
-    <title>Weather Dashboard</title>
+    <title> My Weather Dashboard</title>
   </head>
 
   <body>
