--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body>
     <nav class="navbar navbar-dark bg-dark">
-      <h1>Weather Dashboard</h1>
+      <h1>My Weather Dashboard</h1>
     </nav>
 
     <!-- Search, Search History and Display container. Elements added dynamically  -->
