--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <!-- Link to MY CSS  -->
     <link rel="stylesheet" href="./style.css" />
 
-    <title> My Weather Dashboard</title>
+    <title>Weather Dashboard</title>
   </head>
 
   <body>
     <nav class="navbar navbar-dark bg-dark">
-      <h1>My Weather Dashboard</h1>
+      <h1>Your Weather Dashboard</h1>
     </nav>
 
     <!-- Search, Search History and Display container. Elements added dynamically  -->
