CU-86drucp6k - Page Layout_CSS

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </container>
 
     <main class="row">
-      <!-- Elements added dynamically  -->
+      <!-- Elements added dynamically --- Page Layout Updated! -->
       <div class="display"></div>
       <div class="row row-cols-1 row-cols-md-5 forecastDisplay"></div>
     </main>
